--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "YouTube Playlist Recorder",
     "version": "0.1.0",
     "description": "Records the order of videos that are played within any playlist currently playing",
-    "permissions": ["storage", "tabs"],
+    "permissions": ["storage", "tabs", "activeTab"],
     "host_permissions": ["https://*.youtube.com/*"],
     "background": {
         "service_worker": "backgroundServices.js"
