Added UI for extension to display thumbnail and title of playlist being recorded

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["contentManager.js"],
+            "js": ["view.js"],
             "css": ["view.css"],
             "run_at": "document_idle"
         }
